src/components/snapshots/vault_tasks__components__explorer_tab__tests__move_explorer_tab_component-2.snap
---
source: src/components/explorer_tab.rs
expression: terminal.backend()
---
"                                                                                                                                                                "
"./chocolate_lava_cake.md                                                                                        ┌Search────────────────────────────────────────┐"
"                                                                                                                │- [ ]                                         │"
"                                                                                                                └──────────────────────────────────────────────┘"
"📄 chocolate_la│# Recipe: Chocolate Lava Cake                  │┌❌ Whisk eggs, yolks, sugar, and vanilla:─────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(1, " "), (66, "c")]
"📄 daily_workou│                                               ││📅 2024/09/30                                                                                 │" Hidden by multi-width symbols: [(1, " "), (66, " ")]
"📄 diy_bookshel│                                               ││#cooking                                                                                      │" Hidden by multi-width symbols: [(1, " ")]
"📄 study_plan.m│                                               ││┌✅ In a large mixing bowl, whisk together eggs, egg yolks, sugar, and vanilla until pale and┐│" Hidden by multi-width symbols: [(1, " "), (67, "│")]
"📄 test.md     │                                               │││📅 2024/09/30                                                                               ││" Hidden by multi-width symbols: [(1, " "), (67, "│")]
"               │                                               ││└────────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               ││┌✅ Gradually fold in the cooled chocolate mixture.──────────────────────────────────────────┐│" Hidden by multi-width symbols: [(67, "│")]
"               │                                               │││📅 2024/09/30                                                                               ││" Hidden by multi-width symbols: [(67, "│")]
"               │                                               ││└────────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               ││┌❌ Sift in flour and gently fold it into the batter until just combined. Do not overmix.────┐│" Hidden by multi-width symbols: [(67, "│")]
"               │                                               │││📅 2024/09/30                                                                               ││" Hidden by multi-width symbols: [(67, "│")]
"               │                                               ││└────────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               │└──────────────────────────────────────────────────────────────────────────────────────────────┘"
"               │                                               │┌❌ Bake cakes:────────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(66, " ")]
"               │                                               ││📅 2024/10/01                                                                                 │" Hidden by multi-width symbols: [(66, " ")]
"               │                                               ││#cooking                                                                                      │"
"               │                                               ││┌✅ Divide the batter evenly among the prepared ramekins.────────────────────────────────────┐│" Hidden by multi-width symbols: [(67, "│")]
"               │                                               │││📅 2024/10/01                                                                               ││" Hidden by multi-width symbols: [(67, "│")]
"               │                                               ││└────────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               ││┌✅ Bake for 12 minutes, or until the edges are set but the centers are still gooey.─────────┐│" Hidden by multi-width symbols: [(67, "│")]
"               │                                               │││📅 2024/10/01                                                                               ││" Hidden by multi-width symbols: [(67, "│")]
"               │                                               ││└────────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               ││┌❌ Allow to cool for about 1 minute before dusting with confectioners' sugar and inverting o┐│" Hidden by multi-width symbols: [(67, "│")]
"               │                                               │││📅 2024/10/01                                                                               ││" Hidden by multi-width symbols: [(67, "│")]
"               │                                               ││└────────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               │└──────────────────────────────────────────────────────────────────────────────────────────────┘"
"               │                                               │┌❌ Clean up:──────────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(66, " ")]
"               │                                               ││📅 2024/10/01                                                                                 │" Hidden by multi-width symbols: [(66, " ")]
"               │                                               ││#cooking                                                                                      │"
"               │                                               ││┌❌ Wash and dry all dishes, pots, and utensils used during the recipe preparation.──────────┐│" Hidden by multi-width symbols: [(67, "│")]
"               │                                               │││📅 2024/10/01                                                                               ││" Hidden by multi-width symbols: [(67, "│")]
"               │                                               ││└────────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               │└──────────────────────────────────────────────────────────────────────────────────────────────┘"
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"                                                                    Press hjkl|◄▼▲▶ to move                                                                     "
"                                                                                                                                                                "
