src/components/snapshots/vault_tasks__components__explorer_tab__tests__move_explorer_tab_component-3.snap
---
source: src/components/explorer_tab.rs
expression: terminal.backend()
---
"                                                                                                                                                                "
"./chocolate_lava_cake.md/Recipe: Chocolate Lava Cake                                                            ┌Search────────────────────────────────────────┐"
"                                                                                                                │- [ ]                                         │"
"                                                                                                                └──────────────────────────────────────────────┘"
"# Recipe: Choco│❌ Whisk eggs, yolks, sugar, and vanilla:      │┌❌ Whisk eggs, yolks, sugar, and vanilla:─────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " "), (66, "c")]
"               │❌ Bake cakes:                                 ││📅 2024/09/30                                                                                 │" Hidden by multi-width symbols: [(17, " "), (66, " ")]
"               │❌ Clean up:                                   ││#cooking                                                                                      │" Hidden by multi-width symbols: [(17, " ")]
"               │                                               ││┌✅ In a large mixing bowl, whisk together eggs, egg yolks, sugar, and vanilla until pale and┐│" Hidden by multi-width symbols: [(67, "│")]
"               │                                               │││📅 2024/09/30                                                                               ││" Hidden by multi-width symbols: [(67, "│")]
"               │                                               ││└────────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               ││┌✅ Gradually fold in the cooled chocolate mixture.──────────────────────────────────────────┐│" Hidden by multi-width symbols: [(67, "│")]
"               │                                               │││📅 2024/09/30                                                                               ││" Hidden by multi-width symbols: [(67, "│")]
"               │                                               ││└────────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               ││┌❌ Sift in flour and gently fold it into the batter until just combined. Do not overmix.────┐│" Hidden by multi-width symbols: [(67, "│")]
"               │                                               │││📅 2024/09/30                                                                               ││" Hidden by multi-width symbols: [(67, "│")]
"               │                                               ││└────────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               │└──────────────────────────────────────────────────────────────────────────────────────────────┘"
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"                                                                    Press hjkl|◄▼▲▶ to move                                                                     "
"                                                                                                                                                                "
