src/components/snapshots/vault_tasks__components__explorer_tab__tests__move_explorer_tab_component-4.snap
---
source: src/components/explorer_tab.rs
expression: terminal.backend()
---
"                                                                                                                                                                "
"./chocolate_lava_cake.md/Recipe: Chocolate Lava Cake                                                            ┌Search────────────────────────────────────────┐"
"                                                                                                                │- [ ]                                         │"
"                                                                                                                └──────────────────────────────────────────────┘"
"# Recipe: Choco│❌ Whisk eggs, yolks, sugar, and vanilla:      │┌❌ Bake cakes:────────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " "), (66, "c")]
"               │❌ Bake cakes:                                 ││📅 2024/10/01                                                                                 │" Hidden by multi-width symbols: [(17, " "), (66, " ")]
"               │❌ Clean up:                                   ││#cooking                                                                                      │" Hidden by multi-width symbols: [(17, " ")]
"               │                                               ││┌✅ Divide the batter evenly among the prepared ramekins.────────────────────────────────────┐│" Hidden by multi-width symbols: [(67, "│")]
"               │                                               │││📅 2024/10/01                                                                               ││" Hidden by multi-width symbols: [(67, "│")]
"               │                                               ││└────────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               ││┌✅ Bake for 12 minutes, or until the edges are set but the centers are still gooey.─────────┐│" Hidden by multi-width symbols: [(67, "│")]
"               │                                               │││📅 2024/10/01                                                                               ││" Hidden by multi-width symbols: [(67, "│")]
"               │                                               ││└────────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               ││┌❌ Allow to cool for about 1 minute before dusting with confectioners' sugar and inverting o┐│" Hidden by multi-width symbols: [(67, "│")]
"               │                                               │││📅 2024/10/01                                                                               ││" Hidden by multi-width symbols: [(67, "│")]
"               │                                               ││└────────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               │└──────────────────────────────────────────────────────────────────────────────────────────────┘"
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"                                                                    Press hjkl|◄▼▲▶ to move                                                                     "
"                                                                                                                                                                "
