src/components/snapshots/vault_tasks__components__explorer_tab__tests__move_explorer_tab_component.snap
---
source: src/components/explorer_tab.rs
expression: terminal.backend()
---
"                                                                                                                                                                "
".                                                                                                               ┌Search────────────────────────────────────────┐"
"                                                                                                                │- [ ]                                         │"
"                                                                                                                └──────────────────────────────────────────────┘"
"               │📄 chocolate_lava_cake.md                      │Recipe: Chocolate Lava Cake─────────────────────────────────────────────────────────────────────" Hidden by multi-width symbols: [(17, " ")]
"               │📄 daily_workout.md                            │   ┌❌ Whisk eggs, yolks, sugar, and vanilla:──────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(17, " "), (69, " ")]
"               │📄 diy_bookshelf.md                            │   │📅 2024/09/30                                                                              │" Hidden by multi-width symbols: [(17, " "), (69, " ")]
"               │📄 study_plan.md                               │   │#cooking                                                                                   │" Hidden by multi-width symbols: [(17, " ")]
"               │📄 test.md                                     │   │┌✅ In a large mixing bowl, whisk together eggs, egg yolks, sugar, and vanilla until pale ┐│" Hidden by multi-width symbols: [(17, " "), (70, " ")]
"               │                                               │   ││📅 2024/09/30                                                                            ││" Hidden by multi-width symbols: [(70, " ")]
"               │                                               │   │└─────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               │   │┌✅ Gradually fold in the cooled chocolate mixture.───────────────────────────────────────┐│" Hidden by multi-width symbols: [(70, " ")]
"               │                                               │   ││📅 2024/09/30                                                                            ││" Hidden by multi-width symbols: [(70, " ")]
"               │                                               │   │└─────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               │   │┌❌ Sift in flour and gently fold it into the batter until just combined. Do not overmix.─┐│" Hidden by multi-width symbols: [(70, " ")]
"               │                                               │   ││📅 2024/09/30                                                                            ││" Hidden by multi-width symbols: [(70, " ")]
"               │                                               │   │└─────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               │   └───────────────────────────────────────────────────────────────────────────────────────────┘"
"               │                                               │   ┌❌ Bake cakes:─────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(69, " ")]
"               │                                               │   │📅 2024/10/01                                                                              │" Hidden by multi-width symbols: [(69, " ")]
"               │                                               │   │#cooking                                                                                   │"
"               │                                               │   │┌✅ Divide the batter evenly among the prepared ramekins.─────────────────────────────────┐│" Hidden by multi-width symbols: [(70, " ")]
"               │                                               │   ││📅 2024/10/01                                                                            ││" Hidden by multi-width symbols: [(70, " ")]
"               │                                               │   │└─────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               │   │┌✅ Bake for 12 minutes, or until the edges are set but the centers are still gooey.──────┐│" Hidden by multi-width symbols: [(70, " ")]
"               │                                               │   ││📅 2024/10/01                                                                            ││" Hidden by multi-width symbols: [(70, " ")]
"               │                                               │   │└─────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               │   │┌❌ Allow to cool for about 1 minute before dusting with confectioners' sugar and invertin┐│" Hidden by multi-width symbols: [(70, " ")]
"               │                                               │   ││📅 2024/10/01                                                                            ││" Hidden by multi-width symbols: [(70, " ")]
"               │                                               │   │└─────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               │   └───────────────────────────────────────────────────────────────────────────────────────────┘"
"               │                                               │   ┌❌ Clean up:───────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(69, " ")]
"               │                                               │   │📅 2024/10/01                                                                              │" Hidden by multi-width symbols: [(69, " ")]
"               │                                               │   │#cooking                                                                                   │"
"               │                                               │   │┌❌ Wash and dry all dishes, pots, and utensils used during the recipe preparation.───────┐│" Hidden by multi-width symbols: [(70, " ")]
"               │                                               │   ││📅 2024/10/01                                                                            ││" Hidden by multi-width symbols: [(70, " ")]
"               │                                               │   │└─────────────────────────────────────────────────────────────────────────────────────────┘│"
"               │                                               │   └───────────────────────────────────────────────────────────────────────────────────────────┘"
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"               │                                               │                                                                                                "
"                                                                    Press hjkl|◄▼▲▶ to move                                                                     "
"                                                                                                                                                                "
